feat: Añadiendo basecode del ayudante